# primus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yaml
cmake/: SetupSanitizers.cmake
examples/: CMakeLists.txt  lexer.cpp
examples/python/: rotary.py
htl/: README.md
htl/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
primus/: CMakeLists.txt  meson.build
primus-community/rotary/: build.toml
primus-community/rotary/mlir/: rotary.hlo  rotary.mlir
primus-community/rotary/torch-ext/: torch_binding.cpp
primus-community/rotary/torch-ext/rotary/: __init__.py
primus/analysis/: CMakeLists.txt  MemoryLayoutAnalysis.cpp  MemoryLayoutAnalysis.h
primus/conversions/: CMakeLists.txt  ElementwiseOpToStablehlo.cpp  Passes.hpp  Passes.td  PrimusLegalizeToStablehlo.cpp  Rewriters.hpp  StablehloUtils.cpp  StablehloUtils.hpp
primus/conversions/linalg/: CMakeLists.txt
primus/conversions/linalg/transforms/: CMakeLists.txt  Passes.h  Passes.td  PrimusLegalizeToLinalg.cpp  PrimusRotaryToLinalg.cpp  Rewriters.h
primus/conversions/stablehlo/transforms/: CMakeLists.txt  LegalizeToStablehloUtils.cpp  LegalizeToStablehloUtils.h  Passes.h  Passes.td  PrimusLegalizeToStablehlo.cpp  PrimusToStablehloElementwise.cpp  Rewriters.h
primus/dialect/: AssemblyFormat.cpp  AssemblyFormat.hpp  CMakeLists.txt  PrimusDialect.cpp  PrimusDialect.hpp  PrimusOps.cpp  PrimusOps.hpp  PrimusOps.td  PrimusTypes.td  Register.cpp  Register.hpp
primus/dialects/: AssemblyFormat.cpp  AssemblyFormat.h  Base.cpp  Base.h  Base.td  CMakeLists.txt  OptimusAttrs.td  OptimusDialect.td  OptimusOps.cpp  OptimusOps.h  OptimusOps.td  PrimusAttrs.td  PrimusOps.cpp  PrimusOps.h  PrimusOps.td  Register.cpp  Register.h
primus/include/: meson.build  primus.hpp
primus/include/primus/: compiler.hpp
primus/include/primus/targets/: base.hpp  cuda.hpp
primus/integrations/: CMakeLists.txt
primus/integrations/c/: CMakeLists.txt  PrimusDialect.cpp  PrimusDialect.h
primus/integrations/python/: CMakeLists.txt  PrimusModule.cpp  setup.py
primus/integrations/python/mlir/dialects/: PrimusOps.td  primus.py
primus/integrations/python/primus/: __init__.py  module.py
primus/integrations/python/primus/torch/: __init__.py  types.py
primus/src/: meson.build
primus/src/primus/: compiler.cpp
primus/src/primus/targets/: cuda.cpp
primus/src/primusc/: primusc.cpp
primus/subprojects/: stablehlo.wrap
primus/tools/: CMakeLists.txt  PrimusOptMain.cpp
primus/transforms/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt
primusc/: README.md  pyproject.toml
primusc-py/: pyproject.toml
primusc-py/src/primusc/: __init__.py  compiler.py  llvm.py
primusc-py/src/primusc/passes/: __init__.py
primusc/src/primusc/: compiler.py  devices.py  llvm.py
primusc/src/primusc/passes/: __init__.py
tests/: CMakeLists.txt  analysis.cpp
tlang/: CMakeLists.txt  README.md
tlang/frontend/: CMakeLists.txt  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp  Types.cpp  Types.hpp
tlang/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Parser.hpp  Token.hpp
tlang/tests/: CMakeLists.txt  test_parser.cpp
unicron/: CMakeLists.txt  artifact.cpp  artifact.hpp  errors.hpp  runtime.cpp  runtime.hpp
unicron/runtimes/: cpu.cpp  cpu.hpp
