2706093[project]
name = "primusc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Morgan Funtowicz", email = "funtowiczmo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "llvmlite>=0.44.0",
    "loguru>=0.7.3",
    "mlir>=22.0.0.2025080301",
    "mlir-native-tools>=22.0.0.2025080301",
    "mlir-python-extras>=0.0.8.2025080301",
]

[project.scripts]
primusc = "primusc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
#llvmlite = { git = "https://github.com/numba/llvmlite"}
mlir = { index = "mlir-wheel" }
mlir-native-tools = { index = "mlir-wheel" }
mlir-python-extras = { git = "https://github.com/makslevental/mlir-python-extras"}

[[tool.uv.index]]
name = "mlir-wheel"
url = "https://makslevental.github.io/wheels/"
format = "flat"
